--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,4 +45,4 @@ jobs:
       - name: Run Unit Tests
         run: go test -v -cover ./...
         env:
-          POSTGRES_HOST: postgres
+          POSTGRES_HOST: localhost
